PWA にする準備

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reiwa",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://gokoku.github.io/wareki",
+  "homepage": "./",
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
