--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,30 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Wareki App",
+  "name": "Wareki App",
+  "description": "japanese calendar table app using localStrage and ServiceWorker",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "src": "launcher-icon-1x.png",
+      "sizes": "48x48",
       "type": "image/x-icon"
+    },
+    {
+      "src": "launcher-icon-2x.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "launcher-icon-3x.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "launcher-icon.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
-  "start_url": ".",
+  "start_url": "index.html",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
