--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "eslint": "^6.2.2",
     "querystringify": ">= 2.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
