--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "eslint": "^6.2.2",
+    "@material-ui/core": ">=4.12.4",
+    "@material-ui/icons": ">=4.11.3",
+    "eslint": ">=6.2.2",
+    "postcss": ">= 8.4.38",
     "querystringify": ">= 2.0.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "^3.0.1"
+    "react": ">=16.8.6",
+    "react-dom": ">=16.8.6",
+    "react-scripts": ">=5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
