--- a/package.json
+++ b/package.json
@@ -7,17 +7,13 @@
     "@material-ui/core": ">=4.12.4",
     "@material-ui/icons": ">=4.11.3",
     "eslint": ">=6.2.2",
+    "nth-check": ">= 2.0.1",
     "postcss": ">= 8.4.38",
     "querystringify": ">= 2.0.0",
-<<<<<<< HEAD
     "react": ">=16.8.6",
     "react-dom": ">=16.8.6",
-    "react-scripts": ">=5.0.1"
-=======
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "^5.0.1"
->>>>>>> 6d730ee6590a94b5276a7bf8172416a63a4a00fc
+    "react-scripts": "^3.0.1",
+    "webpack": ">=5.94.0"
   },
   "scripts": {
     "start": "react-scripts start",
