--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "querystringify": ">= 2.0.0",
     "react": ">=16.8.6",
     "react-dom": ">=16.8.6",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "webpack": ">=5.94.0"
   },
   "scripts": {
@@ -37,6 +37,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0"
+    "gh-pages": "^5.0.0",
+    "rollup": ">=3.29.5"
   }
 }
