--- a/package.json
+++ b/package.json
@@ -38,6 +38,28 @@
   },
   "devDependencies": {
     "gh-pages": "^5.0.0",
-    "rollup": ">=3.29.5"
+    "rollup": ">=3.29.5",
+    "react-dev-utils": ">=11.0.4",
+    "loader-utils": ">=1.4.2",
+    "shell-quote": ">=1.7.3",
+    "braces": ">=3.0.3",
+    "ip": ">=2.0.1",
+    "html-minifier": ">=4.0.0",
+    "lodash.template": ">=4.5.0",
+    "webpack-dev-middleware": ">=5.3.4",
+    "semver": ">=6.3.1",
+    "loader-utils": ">=1.4.2",
+    "minimatch": ">=3.0.5",
+    "terser": ">=4.8.1",
+    "node-forge": ">=1.3.0",
+    "ansi-html": ">=0.0.8",
+    "serialize-javascript": ">3.1.0",
+    "micromatch": ">=4.0.8",
+    "tough-cookie": ">=4.1.3",
+    "request": ">=2.88.2",
+    "browserslist": ">=4.16.5",
+    "sockjs": ">=0.3.20",
+    "node-notifier": ">=8.0.1",
+    "yargs-parser": ">=13.1.2"
   }
 }
