--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "nth-check": ">= 2.0.1",
     "postcss": ">= 8.4.38",
     "querystringify": ">= 2.0.0",
-    "react": ">=16.8.6",
-    "react-dom": ">=16.8.6",
+    "react": ">=18.3.1",
+    "react-dom": ">=18.3.1",
     "react-scripts": "^5.0.1",
     "webpack": ">=5.94.0"
   },
@@ -44,13 +44,12 @@
     "html-minifier": ">=4.0.0",
     "ip": ">=2.0.1",
     "loader-utils": ">=1.4.2",
-    "lodash.template": ">=4.5.0",
+    "lodash": ">=4.17.21",
     "micromatch": ">=4.0.8",
     "minimatch": ">=3.0.5",
     "node-forge": ">=1.3.0",
     "node-notifier": ">=8.0.1",
     "react-dev-utils": ">=11.0.4",
-    "request": ">=2.88.2",
     "rollup": ">=3.29.5",
     "semver": ">=6.3.1",
     "serialize-javascript": ">3.1.0",
