--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "webpack-dev-server": ">=5.2.1"
+    "webpack-dev-server": ">=5.2.1",
+    "brace-expansion": "~> 2.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
